Refactored education & skills page code and css. Minor spacing correction for contact page.

--- a/client/src/components/pages/education-page/education-page.css
+++ b/client/src/components/pages/education-page/education-page.css
@@ -1,97 +1,37 @@
 
-.ep-background {
-    height: 100%;
-    width: 100%;
-    background-color: var(--bg-color-2);
-    background-position: center;
-    background-size: cover;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-
-.ep-container {
-    margin-top: auto;
-    margin-bottom: auto;
-    padding: 8rem 0;
-    justify-content: center;
-}
-
-.ep-header {
-    color: var(--text-color-1);
-    font-size: 30px;
-}
-
-.ep-header-hr {
-    border-top: 6px solid var(--accent-color-1);
-    border-radius: 3px;
-}
-
-.ep-message {
-    width: 60vw;
-}
-
 .ep-message-uni {
-    color: var(--accent-color-3);
+  color: var(--accent-color-3);
 }
 
 .ep-message-uni:hover {
-    text-decoration: underline;
-}
-
-.ep-item-container {
-    justify-content: center;
-    text-align: center;
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
-
-@media screen and (max-width: 1000px) {
-    .ep-item-container {
-        width: 50%;
-    }
-}
-
-@media screen and (max-width: 500px) {
-    .ep-item-container {
-        width: 100%;
-    }
-}
-
-@media screen and (min-width: 1000px) {
-    .ep-item-container {
-        width: 25%;
-    }
+  text-decoration: underline;
 }
 
 .ep-item-header {
-    color: var(--text-color-1);
-    font-size: 30px;
-    /* font-weight: bold; */
+  color: var(--text-color-1);
+  font-size: 30px;
 }
 
 .ep-item-message {
-    color: var(--text-color-1);
-    filter: brightness(0.9);
-    font-size: 18px; 
-    /* padding-top: 0.5em;
-    padding-bottom: 0.5em; */
-    padding: 0.5em;
+  color: var(--text-color-1);
+  filter: brightness(0.9);
+  font-size: 18px;
+  padding: 0.5em;
 }
 
 .ep-item-icon {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-    margin-top: 0;
-    font-weight: bold;
-    display: inline-block;
-    justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+  margin-top: 0;
+  font-weight: bold;
+  display: inline-block;
+  justify-content: center;
 }
 
 .ep-item-icon svg {
-    fill: var(--accent-color-3);
-    stroke: var(--accent-color-3); 
-    width: 80px;
-    height: 80px;
+  fill: var(--accent-color-3);
+  stroke: var(--accent-color-3);
+  width: 80px;
+  height: 80px;
 }
